--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 		<form action="{{ url_for('predict')}}" method="POST">
 		<p>Paste Cuisine Image URL here</p>
 		<!-- <input type="text" name="comment"/> -->
-		<textarea name="comment" rows="4" cols="50"></textarea>
+		<textarea name="location" rows="4" cols="50"></textarea>
 		<br/>
 
 		<input type="submit" class="btn-info" value="predict">
